--- a/tailwind.html
+++ b/tailwind.html
@@ -171,7 +171,7 @@
                      class="h-48 w-full object-cover" alt="Running Shoes">
 
                 <div class="p-5">
-                    <h3 class="text-xl font-semibold">Running Shoes</h3>
+                    <h3 class="text-xl font-semibold">Cycling Shoes</h3>
                     <p class="text-gray-600 mt-2">Lightweight sport shoes with extreme comfort & durability.</p>
 
                     <div class="flex justify-between items-center mt-4">
